# rust-wasm

./: .gitignore  Cargo.toml
migrations/2020-05-13-041703_create_users/: up.sql
src/: db.rs  main.rs  routes.rs  schema.rs
src/models/: user.rs
