[package]
name = "rust-postgres"
version = "0.1.0"
authors = ["amilmartin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
actix-web = "2.0.0"
actix-rt = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
futures = "0.3.1"
r2d2 = "0.8"
lazy_static = "1.4"
listenfd = "0.3"
rand = "0.7"
rust-argon2 = "0.5"


